bk_ida/gccida/c2/recog_30
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/recog_30/src/insn-recog.c:41661:10: error: conflicting types for 'recog_30'
__int64  recog_30( rtx x0, rtx insn, int *pnum_clobbers) 
         ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/recog_30/src/insn-recog.c:41197:12: note: previous declaration is here
static int recog_30 PARAMS ((rtx, rtx, int *));
           ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/recog_30/src/insn-recog.c:41984:23: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v7.rtwint = ( __int64)v4->fld[0]; 
                      ^~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/recog_30/src/insn-recog.c:41990:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[2] = v7.rtx; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/recog_30/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/recog_30/src/insn-recog.c:41997:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[3] = v108; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/recog_30/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/recog_30/src/insn-recog.c:42005:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[0] = v110; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/recog_30/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/recog_30/src/insn-recog.c:42009:27: error: expected expression
if ( rtx_equal_p( *( rtx *)( v111 + 8), recog_data_0.operand[2]) ) 
                          ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/recog_30/src/insn-recog.c:42009:41: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( rtx_equal_p( *( rtx *)( v111 + 8), recog_data_0.operand[2]) ) 
                                        ^~~~~~~~~~~~
                                        recog_data
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/recog_30/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/recog_30/src/insn-recog.c:42021:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = v114; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/recog_30/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/recog_30/src/insn-recog.c:42025:27: error: expected expression
if ( rtx_equal_p( *( rtx *)( v115 + 8), recog_data_0.operand[3]) ) 
                          ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/recog_30/src/insn-recog.c:42025:41: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( rtx_equal_p( *( rtx *)( v115 + 8), recog_data_0.operand[3]) ) 
                                        ^~~~~~~~~~~~
                                        recog_data
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/recog_30/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/recog_30/src/insn-recog.c:42057:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[2] = v7.rtx; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/recog_30/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/recog_30/src/insn-recog.c:42064:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[3] = v10; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/recog_30/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/recog_30/src/insn-recog.c:42072:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[0] = v13; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/recog_30/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/recog_30/src/insn-recog.c:42076:28: error: expected expression
if ( !rtx_equal_p( *( rtx *)( v14 + 8), recog_data_0.operand[2]) ) 
                           ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/recog_30/src/insn-recog.c:42076:41: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( !rtx_equal_p( *( rtx *)( v14 + 8), recog_data_0.operand[2]) ) 
                                        ^~~~~~~~~~~~
                                        recog_data
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/recog_30/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/recog_30/src/insn-recog.c:42088:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = v17; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/recog_30/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/recog_30/src/insn-recog.c:42092:28: error: expected expression
if ( !rtx_equal_p( *( rtx *)( v18 + 8), recog_data_0.operand[3]) ) 
                           ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/recog_30/src/insn-recog.c:42092:41: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( !rtx_equal_p( *( rtx *)( v18 + 8), recog_data_0.operand[3]) ) 
                                        ^~~~~~~~~~~~
                                        recog_data
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/recog_30/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/recog_30/src/insn-recog.c:42117:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v42.rtwint = ( __int64)v4->fld[0]; 
                       ^~~~~~~~~~
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/recog_30/src/obj/insn-recog.o] Error 1
